# fantasy

./: Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs
src/app/addteam/: mod.rs
src/app/api/: mod.rs
src/app/db/: control.rs  migrate.rs  mod.rs
src/app/home/: mod.rs
src/app/screen/: mod.rs
src/app/screen/addteam/: busca.rs  lista.rs  mod.rs
src/app/screen/common/: frame.rs  mod.rs  theme.rs
src/app/screen/finance/: inicio.rs  mod.rs  time.rs
src/app/screen/home/: mod.rs
src/app/screen/rodadas/: mod.rs
src/style/: mod.rs
