[package]
name = "cartola"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
iced = { version = "0.13.1", features = ["tokio"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros", "time"] }
