[package]
name = "cartola"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
dotenv = "0.15.0"
iced = { version = "0.13.1", features = ["advanced", "tokio"] }
reqwest = { version = "0.12.15", features = ["json"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros", "time"] }
